--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "@pancakeswap-libs/sdk",
+  "name": "@passive-income/dpex-sdk",
   "license": "MIT",
-  "version": "1.0.1",
-  "description": "🛠 An SDK for building applications on top of pancakeswap.",
+  "version": "3.0.9",
+  "description": "🛠 An SDK for building applications on top of dpex.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/pancakeswap/pancakeswap-sdk.git",
+  "repository": "https://github.com/PSI-Passive-Income/DPEX-sdk.git",
   "keywords": [
-    "pancakeswap",
-    "ethereum"
+    "dpex",
+    "bsc",
+    "binance"
   ],
   "module": "dist/sdk.esm.js",
   "scripts": {
@@ -23,7 +24,7 @@
     "prepublishOnly": "tsdx build"
   },
   "dependencies": {
-    "@pancakeswap-libs/pancake-swap-core": "^0.1.0",
+    "@passive-income/dpex-swap-core": "^0.1.7",
     "big.js": "^5.2.2",
     "decimal.js-light": "^2.5.0",
     "jsbi": "^3.1.1",
